Some initial content

--- a/confluenza.yml
+++ b/confluenza.yml
@@ -1,5 +1,5 @@
-- title: 'Developers'
-  tag: 'developer'
+- title: 'Pinkstertijd'
+  tag: 'pinkstertijd'
 
-- title: 'Users'
-  tag: 'user'
+- title: 'Biezondere Feesten en Themata'
+  tag: 'biezondere-feesten'
