--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:prefix-paths": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "dependencies": {
     "@confluenza/gatsby-theme-confluenza": "^1.0.29",
@@ -39,21 +39,26 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/preset-react": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.1.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-cli": "^4.0.0",
-    "gatsby-plugin-root-import": "^2.0.8"
+    "gatsby-plugin-root-import": "^2.0.8",
+    "typescript": "^4.5.2"
   }
 }
