--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-react": "^7.16.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.1.0",
     "eslint-config-react-app": "^6.0.0",
@@ -58,7 +59,10 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-cli": "^4.0.0",
+    "gatsby-plugin-postcss": "^5.2.0",
     "gatsby-plugin-root-import": "^2.0.8",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2"
   }
 }
