--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "lint:fix": "eslint src --fix"
   },
   "dependencies": {
-    "@confluenza/gatsby-theme-confluenza": "^1.0.29",
-    "gatsby": "^4.0.2",
-    "gatsby-plugin-catch-links": "^4.0.0",
+    "@confluenza/gatsby-theme-confluenza": "^1.0.31",
+    "@fontsource/roboto-condensed": "^4.5.0",
+    "@fontsource/roboto-mono": "^4.5.0",
+    "@fontsource/source-sans-pro": "^4.5.1",
+    "gatsby": "^4.2.0",
+    "gatsby-plugin-catch-links": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -40,25 +43,25 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
-    "@babel/plugin-syntax-flow": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/plugin-syntax-flow": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.1.0",
+    "eslint": "^8.2.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx": "^0.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-cli": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gatsby-cli": "^4.2.0",
     "gatsby-plugin-postcss": "^5.2.0",
     "gatsby-plugin-root-import": "^2.0.8",
     "postcss": "^8.3.11",
