--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
