--- a/package.json
+++ b/package.json
@@ -25,48 +25,47 @@
     "build:prefix-paths": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint": "eslint 'src/**/*.{js,jsx}'",
+    "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix"
   },
   "dependencies": {
-    "@confluenza/gatsby-theme-confluenza": "^1.0.32",
-    "@fontsource/roboto-condensed": "^4.5.0",
-    "@fontsource/roboto-mono": "^4.5.0",
-    "@fontsource/source-sans-pro": "^4.5.1",
-    "gatsby": "^4.3.0",
-    "gatsby-plugin-catch-links": "^4.3.0",
+    "@confluenza/gatsby-theme-confluenza": "^1.0.34",
+    "@fontsource/roboto-condensed": "^4.5.1",
+    "@fontsource/roboto-mono": "^4.5.1",
+    "@fontsource/source-sans-pro": "^4.5.2",
+    "gatsby": "^4.6.1",
+    "gatsby-plugin-catch-links": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-media": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/plugin-syntax-flow": "^7.16.5",
-    "@babel/plugin-transform-react-jsx": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "autoprefixer": "^10.4.0",
+    "@babel/core": "^7.17.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-syntax-flow": "^7.16.7",
+    "@babel/plugin-transform-react-jsx": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.4.1",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^8.8.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gatsby-cli": "^4.3.0",
-    "gatsby-plugin-postcss": "^5.3.0",
+    "gatsby-cli": "^4.6.0",
+    "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-root-import": "^2.0.8",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.2",
-    "typescript": "^4.5.4"
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
+    "typescript": "^4.5.5"
   },
   "packageManager": "yarn@3.1.1"
 }
