--- a/confluenza.yml
+++ b/confluenza.yml
@@ -4,6 +4,9 @@
 - title: 'Tijd na Driekoningen'
   tag: 'tijd-na-driekoningen'
 
+- title: 'Paaskring'
+  tag: 'paaskring'
+
 - title: 'Pinkstertijd'
   tag: 'pinkstertijd'
 
