--- a/confluenza.yml
+++ b/confluenza.yml
@@ -4,8 +4,8 @@
 - title: 'Tijd na Driekoningen'
   tag: 'tijd-na-driekoningen'
 
-- title: 'Paaskring'
-  tag: 'paaskring'
+- title: 'Voorvasten'
+  tag: 'voorvasten'
 
 - title: 'Pinkstertijd'
   tag: 'pinkstertijd'
