--- a/confluenza.yml
+++ b/confluenza.yml
@@ -4,6 +4,9 @@
 - title: 'Tijd na Driekoningen'
   tag: 'tijd-na-driekoningen'
 
+- title: 'Vastentijd'
+  tag: 'vastentijd'
+
 - title: 'Voorvasten'
   tag: 'voorvasten'
 
