--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,5 @@
   "javascript.validate.enable": false,
   "editor.tabSize": 2,
   "standard.enable": false,
-  "spellright.language": [
-    "en",
-    "nl"
-  ]
+  "cSpell.language": "en,nl,nl-NL"
 }
