133: MAANDAG NA ZONDAG LAETARE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
   "cSpell.language": "en,nl,nl-NL",
   "cSpell.words": [
     "Eliseus",
+    "farizeën",
+    "Godzelf",
     "Heer",
     "ingekeerdheid",
     "Introitus",
@@ -12,6 +14,7 @@
     "Nazaret",
     "offerzin",
     "Olijfberg",
+    "schriftgeleerden",
     "zondesmet"
   ]
 }
