134: DINSDAG NA ZONDAG LAETARE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
   "standard.enable": false,
   "cSpell.language": "en,nl,nl-NL",
   "cSpell.words": [
+    "appeleert",
     "Eliseus",
+    "eretaak",
     "farizeën",
     "Godzelf",
     "Heer",
@@ -15,6 +17,8 @@
     "offerzin",
     "Olijfberg",
     "schriftgeleerden",
+    "toekering",
+    "zelfopenbaring",
     "zondesmet"
   ]
 }
