135: WOENSDAG NA ZONDAG LAETARE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,11 +8,13 @@
     "Eliseus",
     "eretaak",
     "farizeën",
+    "genezene",
     "Godzelf",
     "Heer",
     "ingekeerdheid",
     "Introitus",
     "Kafarnaüm",
+    "konsekwenties",
     "Nazaret",
     "offerzin",
     "Olijfberg",
