138: ZATERDAG NA ZONDAG LAETARE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "Nazaret",
     "offerzin",
     "Olijfberg",
+    "PASSIEZONDAG",
     "schriftgeleerden",
     "toekering",
     "zelfopenbaring",
