145: ZATERDAG NA PASSIEZONDAG

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "Nazaret",
     "offerzin",
     "Olijfberg",
+    "PALMZONDAG",
     "PASSIEZONDAG",
     "schriftgeleerden",
     "toekering",
