--- a/confluenza.yml
+++ b/confluenza.yml
@@ -10,6 +10,9 @@
 - title: 'Vastentijd'
   tag: 'vastentijd'
 
+- title: 'Paastijd'
+  tag: 'paastijd'
+
 - title: 'Pinkstertijd'
   tag: 'pinkstertijd'
 
