--- a/package.json
+++ b/package.json
@@ -29,43 +29,42 @@
     "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix"
   },
   "dependencies": {
-    "@confluenza/gatsby-theme-confluenza": "^1.0.39",
-    "@fontsource/roboto-condensed": "^4.5.6",
-    "@fontsource/roboto-mono": "^4.5.5",
-    "@fontsource/source-sans-pro": "^4.5.6",
-    "gatsby": "^4.11.2",
-    "gatsby-plugin-catch-links": "^4.11.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-helmet": "^6.1.0",
+    "@confluenza/gatsby-theme-confluenza": "^1.0.40",
+    "@fontsource/roboto-condensed": "^4.5.9",
+    "@fontsource/roboto-mono": "^4.5.8",
+    "@fontsource/source-sans-pro": "^4.5.11",
+    "gatsby": "^4.21.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-media": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-syntax-flow": "^7.16.7",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@babel/preset-react": "^7.16.7",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "autoprefixer": "^10.4.4",
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.13.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx": "^0.1.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "gatsby-cli": "^4.11.2",
-    "gatsby-plugin-postcss": "^5.11.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gatsby-cli": "^4.21.0",
+    "gatsby-plugin-postcss": "^5.21.0",
     "gatsby-plugin-root-import": "^2.0.8",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.3"
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.2"
 }
