--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "@fontsource/roboto-condensed": "^4.5.9",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/source-sans-pro": "^4.5.11",
+    "@types/eslint": "^8.4.10",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "gatsby": "^4.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,11 +48,12 @@
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.26.0",
@@ -63,8 +68,10 @@
     "gatsby-plugin-postcss": "^5.21.0",
     "gatsby-plugin-root-import": "^2.0.8",
     "postcss": "^8.4.16",
+    "prettier": "^2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.3"
   },
   "packageManager": "yarn@3.2.2"
 }
